--- a/package.json
+++ b/package.json
@@ -39,10 +39,16 @@
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-preset-env": "1.6.1",
+    "bcrypt": "3.0.2",
     "body-parser": "1.18.2",
     "express": "4.16.2",
     "helmet": "3.15.0",
+    "jsonwebtoken": "8.4.0",
+    "mongoose": "5.3.13",
     "morgan": "1.9.0",
+    "passport": "0.4.0",
+    "passport-jwt": "4.0.0",
+    "passport-local": "1.0.0",
     "pug": "2.0.0-beta11",
     "rimraf": "2.6.2"
   },
