--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "babel-preset-env": "1.6.1",
     "bcrypt": "3.0.2",
     "body-parser": "1.18.2",
+    "cookie-parser": "1.4.3",
     "express": "4.16.2",
     "helmet": "3.15.0",
     "jsonwebtoken": "8.4.0",
